RESOLVED FIXED211174
[JSC] JSStringJoiner is missing BigInt handling
https://bugs.webkit.org/show_bug.cgi?id=211174
Summary [JSC] JSStringJoiner is missing BigInt handling
Yusuke Suzuki
Reported 2020-04-29 02:17:04 PDT
[JSC] JSStringJoiner is missing BigInt handling
Attachments
Patch (3.36 KB, patch)
2020-04-29 02:18 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-04-29 02:18:12 PDT
Mark Lam
Comment 2 2020-04-29 02:51:31 PDT
Comment on attachment 397945 [details] Patch r=me
Yusuke Suzuki
Comment 3 2020-04-29 11:01:26 PDT
Comment on attachment 397945 [details] Patch Thanks!
EWS
Comment 4 2020-04-29 11:03:57 PDT
Committed r260906: <https://trac.webkit.org/changeset/260906> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397945 [details].
Radar WebKit Bug Importer
Comment 5 2020-04-29 11:04:13 PDT
Note You need to log in before you can comment on or make changes to this bug.