[JSC] JSStringJoiner is missing BigInt handling https://bugs.webkit.org/show_bug.cgi?id=211174

Reviewed by Mark Lam.

JSTests:

* stress/bigint-to-string-in-array.js: Added.
(shouldBe):

Source/JavaScriptCore:

JSStringJoiner missed handling of BigInt (specifically BigInt32) and appending empty string incorrectly.
In debug build, assertion hits. We should support BigInt in JSStringJoiner.

* runtime/JSStringJoiner.h:
(JSC::JSStringJoiner::appendWithoutSideEffects):


Canonical link: https://commits.webkit.org/224096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260906 268f45cc-cd09-0410-ab3c-d52691b4dbfc